feat(calendar): 新增日历组件

--- a/example/app.json
+++ b/example/app.json
@@ -48,7 +48,8 @@
     "pages/popover/index",
     "pages/sticky/index",
     "pages/pagination/index",
-    "pages/resize/index"
+    "pages/resize/index",
+    "pages/calendar/index"
   ],
   "window": {
     "backgroundTextStyle": "light",
