feat(calendarView): 日历面板

--- a/example/app.json
+++ b/example/app.json
@@ -49,7 +49,7 @@
     "pages/sticky/index",
     "pages/pagination/index",
     "pages/resize/index",
-    "pages/calendar/index"
+    "pages/calendarView/index"
   ],
   "window": {
     "backgroundTextStyle": "light",
