--- a/example/app.json
+++ b/example/app.json
@@ -49,7 +49,8 @@
     "pages/sticky/index",
     "pages/pagination/index",
     "pages/resize/index",
-    "pages/calendarView/index"
+    "pages/calendarView/index",
+    "pages/calendar-pinpin/index"
   ],
   "window": {
     "backgroundTextStyle": "light",
